# Foundation

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  README.md
src/: lib.rs  main.rs
